tests/paczka1/fuzzy1/55301472.err
Error in line 8: ZXQG1BJu A472 -4,3
Error in line 3: 1ORNHNh S458 66,7
Error in line 11: m7YuWP0f0 A761 33,7
Error in line 19: 1ORNHNh S458 1,8
Error in line 20: uaU704s A472 48,3
Error in line 32: m7YuWP0f0 S458 76,34
